# OpsAgent

./: .env.example  .gitignore  ENVIRONMENT.md  PROMPTS.md  RAG_PHASE1_TEST_CASES.md  README.md  STARTUP.md  docs_rag_mvp.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  todo.md  对话案例.txt  新人用户手册.md  示例  项目理解面经.md
eval/: eval_cases.yaml  metrics.py  report.py  run_eval.py
examples/: company_policy.md
src/ops_agent/: __init__.py  cli.py  main.py
src/ops_agent/api/: __init__.py  main.py  security.py
src/ops_agent/api/routes/: __init__.py  agent.py  auth.py  conversations.py  evaluation.py  health.py  rag.py  tasks.py  (+2 more)
src/ops_agent/config/: __init__.py  retrieval_config.py  settings.py
src/ops_agent/context/: __init__.py  context_assembler.py  context_compressor.py  context_manager.py  context_policy.py  context_schema.py  context_workflow.py  conversation_state.py  long_term_memory.py  memory_updater.py  short_term_memory.py  user_profile.py
src/ops_agent/core/: __init__.py  config.py
src/ops_agent/ingestion/: __init__.py  chunker.py  loaders.py  normalizers.py
src/ops_agent/models/: __init__.py  api.py  domain.py
src/ops_agent/observability/: __init__.py  tracing.py
src/ops_agent/prompts/: __init__.py  manager.py
src/ops_agent/rag/: __init__.py  pipeline.py
src/ops_agent/resources/: __init__.py  agent_business_rules.md  business_rules.json  loader.py
src/ops_agent/retrieval/: __init__.py  embeddings.py  vector_store.py
src/ops_agent/schemas/: __init__.py  rag.py
src/ops_agent/services/: __init__.py  agent_service.py  auth_service.py  business_rule_service.py  business_scene.py  conversation_service.py  database_service.py  document_service.py  embedding_service.py  evaluation_service.py  llm_client.py  permission_service.py  rag_service.py  rag_workflow.py  rerank_service.py  runtime_state.py  structured_rule_rag.py  task_queue.py  tool_service.py  trace_service.py  vector_store.py
src/ops_agent/web/: app.js  index.html  styles.css
tests/: test_agent_workflow.py  test_auth_frontend.py  test_config.py  test_context_engineering.py  test_conversations.py  test_dialog_regression.py  test_document_processing.py  test_fault_tolerance.py  test_hybrid_search.py  test_phase4_stability.py  test_prompts.py  test_rag_pipeline.py
(+26 files in other folders)
