[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-agent"
version = "0.1.0"
description = "企业知识库与业务执行 Agent。"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pypdf>=5.0.0",
    "xlrd>=2.0.1",
    "psycopg[binary]>=3.2.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.2",
    "PyMuPDF>=1.24.0",
    "charset-normalizer>=3.3.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ops_agent = ["prompts/templates/*.md", "resources/*.md"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["src/ops_agent/web"]
